[tool.poetry]
name = "crown"
version = "0.1.0"
description = ""
authors = ["Guido <hi@guido.nyc>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
structlog = "^21.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
